unpackaged/main/default/objects/OpportunityHistory__c/OpportunityHistory__c.object-meta.xml
<CustomObject>
    <description>What: Used in analytics demo data tool. DO NOT RENAME.</description>
    <label>OpportunityHistory__c</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>OpportunityHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OpportunityHistory__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>