unpackaged/main/default/objects/OpportunityHistory__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <label>Close Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>