unpackaged/main/default/objects/OpportunityHistory__c/fields/ForecastCategory__c.field-meta.xml
<CustomField>
    <fullName>ForecastCategory__c</fullName>
    <label>Forecast Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>