unpackaged/main/default/objects/OpportunityHistory__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <label>Opportunity ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>