unpackaged/main/default/objects/OpportunityHistory__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <label>Stage Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>